--- a/index.html
+++ b/index.html
@@ -4,53 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Binaurale Töne Generator</title>
-    <script defer src="script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body
-    class="bg-gray-900 text-white flex justify-center items-center min-h-screen"
+    class="bg-gray-900 text-white flex flex-col justify-center items-center min-h-screen p-4"
   >
     <div class="bg-gray-800 p-6 rounded-lg shadow-lg max-w-lg w-full">
       <h2 class="text-xl font-bold text-center mb-4">
         Binaurale Töne Generator
       </h2>
+
       <div class="mb-4">
         <label class="block text-sm font-medium"
-          >Linkes Ohr Frequenz (Hz)</label
+          >Frequenz linkes Ohr (Hz)</label
         >
         <input
           id="leftFreq"
           type="number"
           value="250"
-          class="w-full p-2 rounded bg-gray-700 text-white"
+          class="w-full p-2 rounded bg-gray-700 border border-gray-600 focus:outline-none"
         />
       </div>
+
       <div class="mb-4">
         <label class="block text-sm font-medium"
-          >Rechtes Ohr Frequenz (Hz)</label
+          >Frequenz rechtes Ohr (Hz)</label
         >
         <input
           id="rightFreq"
           type="number"
           value="260"
-          class="w-full p-2 rounded bg-gray-700 text-white"
+          class="w-full p-2 rounded bg-gray-700 border border-gray-600 focus:outline-none"
         />
       </div>
-      <div class="mb-4">
-        <label class="block text-sm font-medium">Balance (Links/Rechts)</label>
-        <input
-          id="balance"
-          type="range"
-          min="-1"
-          max="1"
-          step="0.1"
-          value="0"
-          class="w-full"
-        />
-        <p class="text-sm text-gray-400">
-          Balance: <span id="displayBalance">0</span>
-        </p>
-      </div>
+
       <div class="mb-4">
         <label class="block text-sm font-medium">Lautstärke</label>
         <input
@@ -62,105 +50,32 @@
           value="0.5"
           class="w-full"
         />
-        <p class="text-sm text-gray-400">
-          Lautstärke: <span id="displayVolume">0.5</span>
-        </p>
       </div>
-      <p class="text-sm text-gray-400">Aktuelle Frequenzen:</p>
-      <p class="text-sm">
-        Links: <span id="displayLeft">250</span> Hz | Rechts:
-        <span id="displayRight">260</span> Hz
-      </p>
+
+      <div class="mb-6">
+        <label class="block text-sm font-medium">Balance</label>
+        <input
+          id="balance"
+          type="range"
+          min="-1"
+          max="1"
+          step="0.01"
+          value="0"
+          class="w-full"
+        />
+      </div>
+
       <button
-        id="play"
-        class="w-full bg-green-500 hover:bg-green-600 text-white p-2 rounded mt-4"
+        id="generate"
+        class="w-full p-3 bg-blue-500 hover:bg-blue-600 rounded text-white font-bold flex justify-center items-center"
       >
-        Play
+        🎵 Play Sound
       </button>
-      <button
-        id="pause"
-        class="w-full bg-yellow-500 hover:bg-yellow-600 text-white p-2 rounded mt-2 hidden"
-      >
-        Pause
-      </button>
+
+      <audio id="leftAudio" hidden></audio>
+      <audio id="rightAudio" hidden></audio>
     </div>
-    <script>
-      let audioContext, leftOsc, rightOsc, leftGain, rightGain, merger;
 
-      function startAudio() {
-        if (!audioContext) {
-          audioContext = new (window.AudioContext ||
-            window.webkitAudioContext)();
-          createOscillators();
-        }
-        updateAudio();
-        document.getElementById("play").classList.add("hidden");
-        document.getElementById("pause").classList.remove("hidden");
-      }
-
-      function stopAudio() {
-        if (audioContext) {
-          leftOsc.stop();
-          rightOsc.stop();
-          audioContext.close();
-          audioContext = null;
-        }
-        document.getElementById("play").classList.remove("hidden");
-        document.getElementById("pause").classList.add("hidden");
-      }
-
-      function createOscillators() {
-        leftOsc = audioContext.createOscillator();
-        rightOsc = audioContext.createOscillator();
-        leftGain = audioContext.createGain();
-        rightGain = audioContext.createGain();
-        merger = audioContext.createChannelMerger(2);
-
-        leftOsc.type = "sine";
-        rightOsc.type = "sine";
-
-        leftOsc.connect(leftGain);
-        rightOsc.connect(rightGain);
-        leftGain.connect(merger, 0, 0);
-        rightGain.connect(merger, 0, 1);
-        merger.connect(audioContext.destination);
-
-        let now = audioContext.currentTime;
-        leftOsc.start(now);
-        rightOsc.start(now);
-      }
-
-      function updateAudio() {
-        if (!audioContext) return;
-
-        let leftFreq = parseFloat(document.getElementById("leftFreq").value);
-        let rightFreq = parseFloat(document.getElementById("rightFreq").value);
-        let volume = parseFloat(document.getElementById("volume").value);
-        let balance = parseFloat(document.getElementById("balance").value);
-        let now = audioContext.currentTime;
-
-        // Sanfte Frequenzänderung ohne Knackser
-        leftOsc.frequency.setTargetAtTime(leftFreq, now, 0.05);
-        rightOsc.frequency.setTargetAtTime(rightFreq, now, 0.05);
-
-        // Weiche Balance- und Lautstärkeänderungen
-        let leftVol = volume * (balance <= 0 ? 1 : 1 - balance);
-        let rightVol = volume * (balance >= 0 ? 1 : 1 + balance);
-        leftGain.gain.linearRampToValueAtTime(leftVol / 2, now + 0.05);
-        rightGain.gain.linearRampToValueAtTime(rightVol / 2, now + 0.05);
-
-        document.getElementById("displayLeft").innerText = leftFreq;
-        document.getElementById("displayRight").innerText = rightFreq;
-        document.getElementById("displayBalance").innerText = balance;
-        document.getElementById("displayVolume").innerText = volume.toFixed(2);
-      }
-
-      document.getElementById("play").addEventListener("click", startAudio);
-      document.getElementById("pause").addEventListener("click", stopAudio);
-
-      document.querySelectorAll("input").forEach((input) => {
-        input.addEventListener("input", updateAudio);
-      });
-    </script>
+    <script type="module" src="/js/create_sound.js"></script>
   </body>
 </html>
