cleaned up code

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <button
         id="generate"
-        class="w-full p-3 bg-blue-500 hover:bg-blue-600 rounded text-white font-bold flex justify-center items-center"
+        class="w-full p-3 mt-8 bg-blue-500 hover:bg-blue-600 rounded text-white font-bold flex justify-center items-center"
       >
         🎵 Play Sound
       </button>
