lockscreen fix for ios - balance not working

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           value="0.5"
           class="w-full"
         />
-      </div>
+      </div>  -->
 
       <div class="mb-6">
         <label class="block text-sm font-medium">Balance</label>
@@ -63,7 +63,7 @@
           value="0"
           class="w-full"
         />
-      </div> -->
+      </div>
 
       <button
         id="generate"
@@ -72,8 +72,7 @@
         🎵 Play Sound
       </button>
 
-      <audio id="leftAudio" preload="none" muted hidden></audio>
-      <audio id="rightAudio" preload="none" muted hidden></audio>
+      <audio id="binauralAudio" loop playsinline hidden></audio>
     </div>
 
     <script type="module" src="/js/create_sound.js"></script>
